# de_test

./: .env.dev  .gitignore  docker-compose.yml  pyproject.toml  test.py
src/: create_data_base.py  db_test.py  docker_db_test.py  get_json_data.py  hxj.py  insert_into_table.py  main.py  settings.py
src/call/: work_with_data.py
src/connection/: postgres.py
src/crud/: create_data_base.py  crud.py  insert_into_table.py  multiple_insert.py  prepare_data.py  read_data.py
src/loging/: configure_logging.py
src/parsing/: get_json.py  get_valid_data.py  pars_valid_data.py  parsing_json.py
src/settings/: db.py
src/validation/: __init__.py  password_valid.py  validation_data.py
