[tool.poetry]
name = "de-pet"
version = "0.1.0"
description = "Pet project for data engineer"
authors = ["DavidPhantom <davidnin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.8.0"}
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
