[tool.poetry]
name = "testing-de"
version = "0.1.0"
description = ""
authors = ["DavidPhantom <davidnin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.3.4"
password-validator = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
